# Emergent_Money_Agents

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT_ENVIRONMENT.md  EXACT_OPTIMIZATION_PLAN.md  LICENSE  LIQUIDITY_RESERVE_PLAN.md  MARKET_ORDER_AND_PARALLELISM.md  MODEL_INFORMATION_BOUNDARY.md  MONEY_EMERGENCE_DIAGNOSTIC_PLAN.md  PHENOMENON_BASELINE.md  README.md  RESEARCH_MECHANISM_AND_HYPOTHESES.md  TARGET_10K_PLAN.md  WELFARE_METRICS.md  adamsmithfeb17B.c  pyproject.toml
native/legacy_search/: Cargo.toml  README.md
scripts/: analyze_exchange_media_purity.py  diagnose_money_emergence.py  run_standardization_probe_series.ps1  start_agentbasket_overnight.ps1
src/emergent_money/: __init__.py  analytics.py  artifact_analysis.py  cli.py  config.py  contact_update.py  continuous_runner.py  dashboard.py  dashboard_page.html  drift_compare.py  dto.py  engine.py  hybrid_batching.py  initialization.py  large_screen_runner.py  legacy_cycle.py  legacy_cycle_native.py  legacy_search_backend.py  state.py  (+11 more)
tests/: test_analytics.py  test_artifact_analysis.py  test_config.py  test_contact_update.py  test_dashboard.py  test_drift_compare.py  test_engine.py  test_hybrid_batching.py  test_initialization.py  test_legacy_cycle_native.py  test_legacy_mechanics.py  test_long_run.py  test_native_behavior_compare.py  test_native_cycle_compare.py  test_native_exchange_stage_compare.py  test_native_exchange_stage_trace_compare.py  test_native_post_period_compare.py  test_native_search_compare.py  test_native_stage_math_trace_compare.py  test_proposals.py  test_service.py  test_trade_resolution.py
(+7 files in other folders)
