[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-money"
version = "0.1.0"
description = "GPU-first scaffold for the Emergent Money simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
perf = [
  "numba",
]
native = [
  "maturin>=1.7,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"emergent_money" = ["dashboard_page.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
